apps/torrus/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrus
  labels:
    app: torrus
spec:
  selector:
    matchLabels:
      app: torrus
  template:
    metadata:
      annotations:
        rollout/nonce: "2025-09-20T13:33:00Z"
      labels:
        app: torrus
    spec:
      containers:
        - name: torrus
          image: ghcr.io/tinoosan/torrus
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
