apps/torrus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrus
  labels: { app: torrus }
spec:
  selector: { app: torrus }
  ports:
    - name: http
      port: 80
      targetPort: 9090
