apps/torrus/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torrus
spec:
  ingressClassName: nginx
  rules:
    - host: torrus.dev.jamaguchi.xyz   # patched per env in overlays
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torrus
                port:
                  number: 80
